crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_control_flow_uses_parent_specific_insertion_state.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span>a</span>", true)
const t1 = _template("<div><button></button><main></main></div>", true)
export function render(_ctx) {
const n2 = t1()
const n0 = _child(n2)
const n1 = _next(n0)
_setInsertionState(n0)
const n3 = _createIf(() => (_ctx.dark), () => {
const n5 = t0()
return n5
})
_setInsertionState(n1)
const n6 = _createIf(() => (_ctx.tab), () => {
const _component_MyComp = _resolveComponent("MyComp")
const n8 = _createComponentWithFallback(_component_MyComp, null, null, true)
return n8
})
return n2
}
