crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_component_dispatch_precedes_child_layout.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createDynamicComponent as _createDynamicComponent, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<span> </span>")
export function render(_ctx) {
const n1 = _createDynamicComponent(() => (_ctx.view), null, {
"default": () => {
const n0 = t0()
const x0 = _txt(n0)
_renderEffect(() => _setText(x0, _toDisplayString(_ctx.message)))
return n0
}
}, true)
return n1
}
