crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_siblings_around_control_flow_children.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, next as _next, setClass as _setClass, createInvoker as _createInvoker, delegateEvents as _delegateEvents, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<button> Bindings </button>", true)
const t1 = _template("<section><div class=\"tabs\"><button> Code </button><!><button> Helpers </button></div></section>", true)
_delegateEvents("click")
export function render(_ctx) {
const n1 = t1()
const n0 = _child(n1)
const n2 = _child(n0)
const n5 = _next(n2)
const n4 = _next(n5)
n2.$evtclick = _createInvoker(() => (_ctx.activeTab = 'code'))
_setInsertionState(n0, n5)
const n3 = _createIf(() => (_ctx.inputMode === 'sfc'), () => {
const n7 = t0()
n7.$evtclick = _createInvoker(() => (_ctx.activeTab = 'bindings'))
_renderEffect(() => _setClass(n7, ['tab', { active: _ctx.activeTab === 'bindings' }]))
return n7
})
n4.$evtclick = _createInvoker(() => (_ctx.activeTab = 'helpers'))
_renderEffect(() => {
_setClass(n2, ['tab', { active: _ctx.activeTab === 'code' }])
_setClass(n4, ['tab', { active: _ctx.activeTab === 'helpers' }])
})
return n1
}
