crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_text_after_component_uses_anchor_navigation.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><!> </div>", true)
export function render(_ctx) {
const n3 = t0()
const n2 = _child(n3)
const n1 = _next(n2)
const _component_Comp = _resolveComponent("Comp")
_setInsertionState(n3, n2)
const n0 = _createComponentWithFallback(_component_Comp, null, null, true)
_renderEffect(() => _setText(n1, _toDisplayString(_ctx.value)))
return n3
}
