crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_text_around_component_shares_ordered_layout.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> <!> </div>", true)
export function render(_ctx) {
const n4 = t0()
const n0 = _child(n4)
const n3 = _next(n0, 1)
const n2 = _next(n3, 2)
const _component_Comp = _resolveComponent("Comp")
_setInsertionState(n4, n3, 1)
const n1 = _createComponentWithFallback(_component_Comp, null, null, true)
_renderEffect(() => {
_setText(n0, _toDisplayString(_ctx.before))
_setText(n2, _toDisplayString(_ctx.after))
})
return n4
}
